# open-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  update-requirements.yml
experimental/: bigram-search.ipynb  document-viewer.ipynb
notebooks/: 1-loading-data.ipynb  2-searchable-world-map.ipynb
src/: config.py  data_helpers.py
src/notebooks/: 1-loading-data.ipynb
src/streamlit_apps/: README.md  searchable_data_dashboard.py  searchable_world_map.py
streamlit_apps/: data_helpers.py  searchable_world_map.py
