[tool.poetry]
name = "open-data"
version = "0.1.0"
description = ""
authors = ["CPR Tech <tech@climatepolicyradar.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = {extras = ["cli"], version = "^0.25.1"}
jupyterlab = "^4.2.5"
datasets = "^3.0.1"
duckdb = "^1.1.1"
seaborn = "^0.13.2"
geopandas = "^1.0.1"
geodatasets = "^2024.8.0"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
